# csdlweb-2024

./: #food-delivery.drawio  Dockerfile  README.md  alembic.ini  docker-compose.yml  food-delivery.drawio  package-lock.json  pyproject.toml  schemas.drawio
app/: .env  Dockerfile  config.py  dependencies.py  main.py  requirements.txt
app/auth/: auth.py  database.py  manager.py
app/models/: delivery.py  user.py
app/routers/: admin.py  courier.py  courier_worker.py  delivery.py  kitchen_worker.py  restaurant.py  users.py
app/schemas/: cart.py  delivery.py  dish.py  order.py  restaurant.py  user.py
app/services/: admin_service.py  customer_service.py
app/settings/: fastapi_settings.py
app/static/: OIP.jfif
app/test/: cart_test.py
app/utils/: customer_location.py  dish.py
front/: Dockerfile  package-lock.json  package.json
front/src/: App.jsx  index.css  main.jsx
front/src/components/: AddBalance.jsx  AdminPanel.jsx  CourierPage.jsx  CourierWorkerRegister.jsx  Couriers.jsx  Customers.jsx  DishCategories.jsx  Dishes.jsx  Header.jsx  KitchenOrders.jsx  Login.jsx  MainPage.jsx  OrderPage.jsx  Orders.jsx  Register.jsx  RegisterAdmin.jsx  UpdateLocation.jsx
front/src/components/images/: index.html  style.css
front/src/components/styles/: AddBalance.css  AdminPanel.css  CourierPage.css  Dishes.css  KitchenOrders.css  Login.css  MainPage.css  Order.css  Register.css  RegisterAdmin.css  Table.tsx  UpdateLocation.css  header.css
java_service/: pom.xml
service/: Dockerfile  pom.xml
src/main/resources/: application.properties
(+90 files in other folders)
