[tool.poetry]
name = "food-delivery"
version = "0.1.0"
description = ""
authors = ["RubiFoc <zhenya20057@mail.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.114.2"
uvicorn = "^0.30.6"
python-dotenv = "^1.0.1"
fastapi-users = {extras = ["sqlalchemy"], version = "^13.0.0"}
asyncpg = "^0.29.0"
sqlalchemy = "^2.0.35"
alembic = "^1.13.3"
psycopg = "^3.2.2"
psycopg2-binary = "^2.9.9"
geoalchemy2 = "^0.15.2"
httpx = "^0.27.2"
pytest-asyncio = "^0.24.0"
passlib = "^1.7.4"
fastapi-admin = "^1.0.4"
geopy = "^2.4.1"
fastadmin = {extras = ["fastapi", "sqlalchemy"], version = "^0.2.16"}
pytest = "^8.3.4"
coverage = "^7.6.8"
flask = "^3.1.0"
flask-admin = "^1.6.1"
flask-sqlalchemy = "^3.1.1"
sqladmin = "^0.20.1"


[tool.poetry.group.dev.dependencies]
pytest = "^8.3.4"
pytest-asyncio = "^0.24.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
